--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,8 @@
 
 .content{
   Width:  375px;
-  Height:  667px;
+  Height:  100%;
+  min-height: 667px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -12,6 +13,11 @@
   align-items: center;
   z-index: 1;
   background-color: rgba(251, 107, 107, 1);
+}
+
+.content img{
+  Width: 100px;
+  Height: 100px;
 }
 
 .content h1{
@@ -22,10 +28,9 @@
   line-height: 45px;
   display: flex;
   align-items: center;
-  text-align: center;
   letter-spacing: -0.012em;
   color: #FFFFFF;
-  margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 .initial-button{
@@ -38,6 +43,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 30px;
 }
 .initial-button h2{
   font-family: 'Recursive';
@@ -49,9 +55,93 @@
   color: #D70900;
 }
 
+.flashcard-screen{
+  justify-content: flex-start;
+}
+
 .top {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-top: 48px;
   margin-bottom: 25px;
+}
+
+.top img{
+  width: 52px;
+ height: 60px;
+ margin-right: 30px;
+}
+
+.box-question{
+  width: 300px;
+  height: 65px;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  font-family: 'Recursive', sans-serif;
+}
+
+.flashcard-list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 70px;
+}
+
+.box{
+  margin-bottom: 20px;
+}
+.closeCard{
+  display: flex;
+  width: 300px;
+  height: 65px;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 22px 0 15px;
+}
+
+.closeCard p {
+  width: 87px;
+  height: 19px;
+  font-family: 'Recursive';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  color: #333333;
+}
+
+.closeCard img{
+  Width: 20px;
+Height: 23px;
+}
+
+.openCard img{
+  width: 30px;
+  height: 20px;
+  margin-top: 30%;
+  margin-right: 5%;
+}
+
+.openCard{
+  display: flex;
+  width: 300px;
+  min-height: 130px;
+  background: #FFFFD4;
+}
+
+.textQuestion{
+  width: 100%;
+  height: 70px;
+  box-sizing: border-box;
+  font-family: 'Recursive';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  margin: 15px 0px 0px 15px;
 }
