--- a/public/style.css
+++ b/public/style.css
@@ -91,8 +91,9 @@
 
 .box{
   margin-bottom: 20px;
+  position: relative;
 }
-.closeCard{
+.closeCard, .zap, .finalCard{
   display: flex;
   width: 300px;
   height: 65px;
@@ -114,10 +115,36 @@
   line-height: 19px;
   color: #333333;
 }
+.finalCard p {
+  width: 87px;
+  height: 19px;
+  font-family: 'Recursive';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  color: #333333;
+}
+
+.zap p {
+  width: 87px;
+  height: 19px;
+  font-family: 'Recursive';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  color: #333333;
+}
 
 .closeCard img{
   Width: 20px;
 Height: 23px;
+}
+
+.zap img{
+  Width: 20px;
+  Height: 23px; 
 }
 
 .openCard img{
@@ -144,4 +171,63 @@ Height: 23px;
   font-size: 18px;
   line-height: 22px;
   margin: 15px 0px 0px 15px;
+}
+
+.buttons{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  bottom: 6px;
+  left: 0px;
+}
+
+button{
+    width: 85px;
+    height: 37px;
+    margin: 0px 5px;
+    border: solid 1px #FFFFFF;
+    border-radius: 5px;
+    font-family: 'Recursive', sans-serif;
+    font-size: 12px;
+    color: #FFFFFF;
+    text-align: center;
+}
+
+button:nth-of-type(1) {
+  background-color: #FF3030;
+}
+button:nth-of-type(2) {
+  background-color: #FF922E;
+}
+button:nth-of-type(3) {
+  background-color: #2FBE34;
+}
+
+ p.Error {
+  text-decoration: line-through;
+  color: #FF3030;
+}
+ p.Doubt {
+  text-decoration: line-through;
+  color: #FF922E;
+}
+ p.Correct {
+  text-decoration: line-through;
+  color: #2FBE34;
+}
+
+.finalCard img{
+  Width: 20px;
+  Height: 23px;
+  position: absolute;
+  bottom: 20px;
+  right: 16px;
+}
+
+.footerBox{
+  width:100%;
+  height: 70px;
+  background: #FFFFFF;
+  box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
 }
