--- a/public/style.css
+++ b/public/style.css
@@ -15,11 +15,6 @@
   background-color: rgba(251, 107, 107, 1);
 }
 
-.content img{
-  Width: 100px;
-  Height: 100px;
-}
-
 .content h1{
   font-family: 'Righteous';
   font-style: normal;
@@ -30,7 +25,19 @@
   align-items: center;
   letter-spacing: -0.012em;
   color: #FFFFFF;
-  margin-top: 30px;
+}
+
+firstP{
+  font-family: 'Righteous';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 45px;
+  display: flex;
+  align-items: center;
+  letter-spacing: -0.012em;
+  color: #FFFFFF;
+  margin-top: 20px;
 }
 
 .initial-button{
@@ -68,7 +75,7 @@
 }
 
 .top img{
-  width: 52px;
+ width: 52px;
  height: 60px;
  margin-right: 30px;
 }
@@ -150,14 +157,15 @@ Height: 23px;
 .openCard img{
   width: 30px;
   height: 20px;
-  margin-top: 30%;
-  margin-right: 5%;
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
 }
 
 .openCard{
   display: flex;
   width: 300px;
-  min-height: 130px;
+  min-height: 150px;
   background: #FFFFD4;
 }
 
@@ -230,4 +238,52 @@ button:nth-of-type(3) {
   height: 70px;
   background: #FFFFFF;
   box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footerBox h2{
+  font-family: 'Recursive';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px; 
+  color: #333333;
+}
+
+.footerBox p{
+  font-family: 'Recursive';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px; 
+  color: #333333;
+  margin: 10px 0px 10px 0px;
+}
+
+.footerBox h3{
+  font-family: 'Recursive';
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 22px;
+/* identical to box height */
+
+
+color: #333333;
+}
+
+.iconImg{
+  width: 20px;
+  height: 16px;
+  margin-left: 7px;
+}
+
+.finished{
+  height: 170px;
+}
+
+.message{
+  text-align: center;
 }
